--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 
-# binary
-bin-int/
-
 # User-specific files
 *.rsuser
 *.suo
@@ -243,6 +240,9 @@ ClientBin/
 *.pfx
 *.publishsettings
 orleans.codegen.cs
+
+# intermediate binary
+bin-int/
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
