--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -174,6 +174,12 @@
       <Project>{C0FF640D-2C14-8DBE-F595-301E616989EF}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Shaders\Board.frag" />
+    <None Include="Assets\Shaders\Board.vert" />
+    <None Include="Assets\Shaders\Piece.frag" />
+    <None Include="Assets\Shaders\Piece.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
