--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -20,7 +20,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3C64737E-B0EE-3BED-91DD-67EEF7A33787}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.22000.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
     <Platform>x64</Platform>
     <ProjectName>Chess</ProjectName>
     <VCProjectUpgraderObjectName>NoUpgrade</VCProjectUpgraderObjectName>
@@ -261,6 +261,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="C:\Dev\Rishab\ClionProjects\Chess\Chess\src\Engine\Events\Events.h" />
     <ClInclude Include="C:\Dev\Rishab\ClionProjects\Chess\Chess\src\Engine\Events\MouseEvents.h" />
     <ClInclude Include="C:\Dev\Rishab\ClionProjects\Chess\Chess\src\Engine\Events\WindowEvents.h" />
+    <ClCompile Include="C:\Dev\Rishab\ClionProjects\Chess\Chess\src\Board\PromotionBoard.cpp" />
+    <ClInclude Include="C:\Dev\Rishab\ClionProjects\Chess\Chess\src\Board\PromotionBoard.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="C:\Dev\Rishab\ClionProjects\Chess\ZERO_CHECK.vcxproj">
