another project refactor TODO: finish checking

--- a/.gitignore
+++ b/.gitignore
@@ -377,4 +377,7 @@ out
 .64
 cmake-build-debug
 cmake-build-debug-event-trace
+cmake-build-dist
+cmake-build-release
+cmake-build-release-event-trace
 bin
