--- a/Chess/CMakeLists.txt
+++ b/Chess/CMakeLists.txt
@@ -105,6 +105,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
         "GLFW_INCLUDE_NONE;"
         "UNICODE;"
         "_UNICODE"
+        $<$<CONFIG:Debug>:DEBUG>
         )
 
 ################################################################################
